--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -6,29 +6,29 @@ on:
       - main
 
 jobs:
-  jekyll:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v4
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 3.1
+          ruby-version: 3.3
+          bundler-cache: true
+
       - name: Install dependencies
         run: |
-          gem install bundler
           bundle init
           echo "gem 'minimal-mistakes-jekyll'" >> Gemfile
           bundle install
+
       - name: Build site
-        run: bundle exec jekyll build --destination ./_site
-      - name: Deploy
+        run: bundle exec jekyll build -d _site
+
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+          publish_dir: _site
