--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -20,9 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          bundle init
-          echo "gem 'minimal-mistakes-jekyll'" >> Gemfile
+          gem install bundler
           bundle install
+
+          
 
       - name: Build site
         run: bundle exec jekyll build -d _site
