--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.2
           bundler-cache: true
@@ -22,8 +25,6 @@ jobs:
         run: |
           gem install bundler
           bundle install
-
-          
 
       - name: Build site
         run: bundle exec jekyll build -d _site
