--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "Home"
     url: /
-  - title: "Projects"
-    url: /projects/
+- title: "Projects"
+  url: /projects-ml/
   - title: "Resume"
     url: /resume/
 
