Point nav to /projects/ folder

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ main:
   - title: "Home"
     url: /
   - title: "Projects"
-    url: /projects-ml/
+    url: /projects/
   - title: "Resume"
     url: /resume/
 
